# Database-Management-System

./: CMakeLists.txt  README.md
demo/: main.cpp
include/: basic_faculties.h  branch_faculties.h  db_driver.h  db_driver_basic_faculties.h  db_driver_branch_faculties.h  db_driver_gibrid_faculties.h  faculties.h  interface.h  sorting.h
sources/: basic_faculties.cpp  branch_faculties.cpp  db_driver.cpp  db_driver_basic_faculties.cpp  db_driver_branch_faculties.cpp  db_driver_gibrid_faculties.cpp  interface.cpp
